// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`receiptItems.update > functionality > update name > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:92190998-0b5f-4424-99ed-35892271544c": {
        "name": "illum debitis atque",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update name > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:4fbfa846-5616-44f4-ada1-73e3d14c5bf9": {
        "name": "nostrum voluptates incidunt",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update price > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:92190998-0b5f-4424-99ed-35892271544c": {
        "price": "582.6600",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update price > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:4fbfa846-5616-44f4-ada1-73e3d14c5bf9": {
        "price": "647.3500",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update quantity > foreign 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:92190998-0b5f-4424-99ed-35892271544c": {
        "quantity": "100.0000",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;

exports[`receiptItems.update > functionality > update quantity > own 1`] = `
{
  "updated": {
    "receiptItems": {
      "id:4fbfa846-5616-44f4-ada1-73e3d14c5bf9": {
        "quantity": "82.0000",
        "updatedAt": "2020-01-01 00:01:00+00",
      },
    },
  },
}
`;
